--- a/index.html
+++ b/index.html
@@ -16,14 +16,37 @@
         <div class="titulos mt-3">
             <img src="img/Logo_LaPaulina.jpg" alt="" class="logo">
             <div class="redes">
-                <img src="img/redes.png" alt="" class="redes_img">
-                <img src="img/redes.png" alt="" class="redes_img">
-                <img src="img/redes.png" alt="" class="redes_img">
+                <img src="img/pedidosya.png" alt="" class="redes_img">
+                <img src="img/whatsapp.png" alt="" class="redes_img">
+                <img src="img/instagram.png" alt="" class="redes_img">
             </div>
         </div>
 
         <div class="promo_portada mt-3">
-            <img src="img/promo_portada.jpg" alt="" class="img-fluid img_promo">
+
+          <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/slider1.jpg" class="d-block w-100 img_slider" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider2.jpg" class="d-block w-100 img_slider" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider3.png" class="d-block w-100 img_slider" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+            <!-- <img src="img/promo_portada.jpg" alt="" class="img-fluid img_promo"> -->
         </div>
 
         <div class="contenido mt-3">
