--- a/index.html
+++ b/index.html
@@ -3,53 +3,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Granja La Paulina</title>
 </head>
 <body>
 
-    <div class="container">
+    <!-- <div class="container-fluid p-0">
         <img src="img/portada.png" alt="" class="portada img-fluid">
+    </div>  -->
+
+
+    <div class="promo_portada">
+
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/slider1.jpg" class="d-block w-100 img_slider" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/slider2.jpg" class="d-block w-100 img_slider" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/slider3.png" class="d-block w-100 img_slider" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
 
+
     <div class="container">
-        <div class="titulos mt-3">
-            <img src="img/Logo_LaPaulina.jpg" alt="" class="logo">
-            <div class="redes">
-                <img src="img/pedidosya.png" alt="" class="redes_img">
-                <img src="img/whatsapp.png" alt="" class="redes_img">
-                <img src="img/instagram.png" alt="" class="redes_img">
+        <!-- <div class="titulos mt-4 container"> -->
+          <!-- <div> -->
+            <div class="redes mt-4">
+
+              <img src="img/Logo_LaPaulina.jpg" alt="" class="logo">
+  
+              <div class="iconos_redes">
+                <div class="icon mx-1">
+                  <img src="img/pedidosya.png" alt="" class="iconos">
+                  <span class="descripcion_icon">PedidosYa</span>
+                </div>
+  
+                <div class="icon mx-1">
+                    <img src="img/whatsapp.png" alt="" class="iconos">
+                    <span class="descripcion_icon">Whatsapp</span>
+                </div>
+  
+                <div class="icon mx-1">
+                  <img src="img/ubicacion.png" alt="" class="iconos">
+                  <span class="descripcion_icon">Ubicación</span>
+                </div>
+              </div>
             </div>
-        </div>
+          <!-- </div> -->
+        <!-- </div> -->
 
-        <div class="promo_portada mt-3">
+      </div>
 
-          <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/slider1.jpg" class="d-block w-100 img_slider" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/slider2.jpg" class="d-block w-100 img_slider" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/slider3.png" class="d-block w-100 img_slider" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-
-            <!-- <img src="img/promo_portada.jpg" alt="" class="img-fluid img_promo"> -->
-        </div>
-
-        <div class="contenido mt-3">
+        <div class="contenido my-4 container">
             <div class="medallones">
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
@@ -59,20 +79,33 @@
                         </button>
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                        <div class="accordion-body p-1 interna_categoria">
+                        <div class="accordion-body interna_categoria row">
 
 
-                            <div class="card_producto">
-                                <img src="img/medallones_soja.png" alt="" class="img-fluid">
+                            <div class="card_producto col col-6">
+                                <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
                                 <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
                             </div>
 
-                            <div class="card_producto">
+                            <div class="card_producto col col-6">
                                 <img src="img/medallones_soja.png" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+
                             </div>
 
-                          <!-- s. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow. -->
+                            <div class="card_producto col col-6">
+                              <img src="img/medallones_soja.png" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Medallones de Soja</h2>
+                            </div>
+
+                            <div class="card_producto col col-6">
+                              <img src="img/medallones_soja.png" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Medallones de Soja</h2>
+                            </div>
+
+
                         </div>
                       </div>
                     </div>
@@ -83,20 +116,102 @@
                         </button>
                       </h2>
                       <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate 
+                        <div class="accordion-body p-1 interna_categoria row">
+                          
+                          <div class="card_producto col col-6">
+                            <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
+                            <h2 class="titulo_producto">Medallones de Soja</h2>
+                            <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                        </div>
+
+                        <div class="card_producto col col-6">
+                            <img src="img/medallones_soja.png" alt="" class="img-fluid">
+                            <h2 class="titulo_producto">Medallones de Soja</h2>
+                            <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+
+                        </div>
+
+                        <div class="card_producto col col-6">
+                          <img src="img/medallones_soja.png" alt="" class="img-fluid">
+                          <h2 class="titulo_producto">Medallones de Soja</h2>
+                        </div>
+
+                        <div class="card_producto col col-6">
+                          <img src="img/medallones_soja.png" alt="" class="img-fluid">
+                          <h2 class="titulo_producto">Medallones de Soja</h2>
+                        </div>
+
                         </div>
                       </div>
                     </div>
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          Accordion Item #3
+                          Pollo
                         </button>
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element.
+                        <div class="accordion-body p-1 interna_categoria row">
+
+                          <div class="card_producto">
+                                <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
+                                <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                            </div>
+
+                            <div class="card_producto">
+                                <img src="img/medallones_soja.png" alt="" class="img-fluid">
+                                <h2 class="titulo_producto">Medallones de Soja</h2>
+                            </div>
+
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          Hamburguesas
+                        </button>
+                      </h2>
+                      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body p-1 interna_categoria row">
+
+                          <div class="card_producto">
+                                <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
+                                <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                            </div>
+
+                            <div class="card_producto">
+                                <img src="img/medallones_soja.png" alt="" class="img-fluid">
+                                <h2 class="titulo_producto">Medallones de Soja</h2>
+                            </div>
+
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          Especiales
+                        </button>
+                      </h2>
+                      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body p-1 interna_categoria row">
+
+                          <div class="card_producto">
+                                <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
+                                <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                            </div>
+
+                            <div class="card_producto">
+                                <img src="img/medallones_soja.png" alt="" class="img-fluid">
+                                <h2 class="titulo_producto">Medallones de Soja</h2>
+                            </div>
+
                         </div>
                       </div>
                     </div>
