--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
                             <div class="card_producto col col-6">
                               <img src="img/medallones_soja.png" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Medallones de Soja</h2>
+                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/medallones_soja.png" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Medallones de Soja</h2>
+                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
                             </div>
 
 
@@ -116,7 +118,7 @@
                         </button>
                       </h2>
                       <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body p-1 interna_categoria row">
+                        <div class="accordion-body interna_categoria row">
                           
                           <div class="card_producto col col-6">
                             <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
@@ -134,11 +136,15 @@
                         <div class="card_producto col col-6">
                           <img src="img/medallones_soja.png" alt="" class="img-fluid">
                           <h2 class="titulo_producto">Medallones de Soja</h2>
+                          <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+
                         </div>
 
                         <div class="card_producto col col-6">
                           <img src="img/medallones_soja.png" alt="" class="img-fluid">
                           <h2 class="titulo_producto">Medallones de Soja</h2>
+                          <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+
                         </div>
 
                         </div>
@@ -151,7 +157,7 @@
                         </button>
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body p-1 interna_categoria row">
+                        <div class="accordion-body interna_categoria row">
 
                           <div class="card_producto">
                                 <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
@@ -162,6 +168,8 @@
                             <div class="card_producto">
                                 <img src="img/medallones_soja.png" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+
                             </div>
 
                         </div>
@@ -175,7 +183,7 @@
                         </button>
                       </h2>
                       <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body p-1 interna_categoria row">
+                        <div class="accordion-body interna_categoria row">
 
                           <div class="card_producto">
                                 <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
@@ -186,6 +194,8 @@
                             <div class="card_producto">
                                 <img src="img/medallones_soja.png" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+
                             </div>
 
                         </div>
@@ -199,7 +209,7 @@
                         </button>
                       </h2>
                       <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body p-1 interna_categoria row">
+                        <div class="accordion-body interna_categoria row">
 
                           <div class="card_producto">
                                 <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
@@ -210,6 +220,8 @@
                             <div class="card_producto">
                                 <img src="img/medallones_soja.png" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+
                             </div>
 
                         </div>
