--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          Medallones
+                          Pollo
                         </button>
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
@@ -83,27 +83,57 @@
 
 
                             <div class="card_producto col col-6">
-                                <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
-                                <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <img src="img/Pollo.png" alt="" class="img-fluid img_producto">
+                                <h2 class="titulo_producto">Pollo</h2>
                                 <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
                             </div>
 
                             <div class="card_producto col col-6">
-                                <img src="img/medallones_soja.png" alt="" class="img-fluid">
-                                <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <img src="img/Pechuga.jpg" alt="" class="img-fluid">
+                                <h2 class="titulo_producto">Pechuga</h2>
                                 <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
 
                             </div>
 
                             <div class="card_producto col col-6">
-                              <img src="img/medallones_soja.png" alt="" class="img-fluid">
-                              <h2 class="titulo_producto">Medallones de Soja</h2>
+                              <img src="img/Pata Muslo.jpg" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Pata Muslo</h2>
                               <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
                             </div>
 
                             <div class="card_producto col col-6">
-                              <img src="img/medallones_soja.png" alt="" class="img-fluid">
-                              <h2 class="titulo_producto">Medallones de Soja</h2>
+                              <img src="img/Filet.jpg" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Filet</h2>
+                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                            </div>
+
+                            <div class="card_producto col col-6">
+                              <img src="img/HamburguesaPollo.jpg" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Hamburguesa de Pollo</h2>
+                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                            </div>
+
+                            <div class="card_producto col col-6">
+                              <img src="img/Alitas.png" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Alitas</h2>
+                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                            </div>
+
+                            <div class="card_producto col col-6">
+                              <img src="img/supremas.jpg" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Supremas</h2>
+                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                            </div>
+
+                            <div class="card_producto col col-6">
+                              <img src="img/Trocitos.jpg" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Trocitos</h2>
+                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                            </div>
+
+                            <div class="card_producto col col-6">
+                              <img src="img/Menudos.jpg" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Menudos</h2>
                               <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
                             </div>
 
@@ -121,31 +151,24 @@
                         <div class="accordion-body interna_categoria row">
                           
                           <div class="card_producto col col-6">
-                            <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
-                            <h2 class="titulo_producto">Medallones de Soja</h2>
+                            <img src="img/FiletMerluza.jpg" alt="" class="img-fluid img_producto">
+                            <h2 class="titulo_producto">Filet de Merluza</h2>
                             <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
                         </div>
 
                         <div class="card_producto col col-6">
-                            <img src="img/medallones_soja.png" alt="" class="img-fluid">
-                            <h2 class="titulo_producto">Medallones de Soja</h2>
-                            <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
-
-                        </div>
-
-                        <div class="card_producto col col-6">
-                          <img src="img/medallones_soja.png" alt="" class="img-fluid">
-                          <h2 class="titulo_producto">Medallones de Soja</h2>
+                          <img src="img/MedallonMerluza.png" alt="" class="img-fluid img_producto">
+                          <h2 class="titulo_producto">Medallón de Merluza</h2>
                           <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                      </div>
 
-                        </div>
+                      <div class="card_producto col col-6">
+                        <img src="img/MerluzaEspinacaQueso.jpg" alt="" class="img-fluid img_producto">
+                        <h2 class="titulo_producto">Medallón de Merluza, Espinaca y Queso</h2>
+                        <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                    </div>
 
-                        <div class="card_producto col col-6">
-                          <img src="img/medallones_soja.png" alt="" class="img-fluid">
-                          <h2 class="titulo_producto">Medallones de Soja</h2>
-                          <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
 
-                        </div>
 
                         </div>
                       </div>
@@ -153,50 +176,62 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          Pollo
+                          Rebozados
                         </button>
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body interna_categoria row">
 
                           <div class="card_producto">
-                                <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
-                                <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <img src="img/PatitasPollo.jpg" alt="" class="img-fluid img_producto">
+                                <h2 class="titulo_producto">Patitas de Pollo</h2>
                                 <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
                             </div>
 
                             <div class="card_producto">
-                                <img src="img/medallones_soja.png" alt="" class="img-fluid">
-                                <h2 class="titulo_producto">Medallones de Soja</h2>
+                                <img src="img/PatitasPolloJamonyQueso.jpg" alt="" class="img-fluid">
+                                <h2 class="titulo_producto">Patitas de Pollo c/ jamón y queso</h2>
                                 <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
-
                             </div>
 
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                          Hamburguesas
-                        </button>
-                      </h2>
-                      <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body interna_categoria row">
+                            <div class="card_producto">
+                              <img src="img/Nugget.jpg" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Nuggets</h2>
+                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                          </div>
 
                           <div class="card_producto">
-                                <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
-                                <h2 class="titulo_producto">Medallones de Soja</h2>
-                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
-                            </div>
+                            <img src="img/NuggetJamonyQueso.jpg" alt="" class="img-fluid">
+                            <h2 class="titulo_producto">Nuggets Jamón y Queso</h2>
+                            <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                        </div>
 
-                            <div class="card_producto">
-                                <img src="img/medallones_soja.png" alt="" class="img-fluid">
-                                <h2 class="titulo_producto">Medallones de Soja</h2>
-                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                        <div class="card_producto">
+                          <img src="img/MedallonJamonQueso.jpg" alt="" class="img-fluid">
+                          <h2 class="titulo_producto">Medallón Jamón y Queso</h2>
+                          <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                      </div>
 
-                            </div>
+                      
+                      <div class="card_producto">
+                        <img src="img/Ricosaurios.jpg" alt="" class="img-fluid">
+                        <h2 class="titulo_producto">Ricosaurios</h2>
+                        <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                    </div>
+
+                    <div class="card_producto">
+                      <img src="img/pochoclos.jpg" alt="" class="img-fluid">
+                      <h2 class="titulo_producto">Pochoclos de Pollo</h2>
+                      <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                  </div>
+
+                  <div class="card_producto">
+                    <img src="img/pechuguitaCrispy.png" alt="" class="img-fluid">
+                    <h2 class="titulo_producto">Pechuguita Crispy</h2>
+                    <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                </div>
+
+
 
                         </div>
                       </div>
@@ -216,11 +251,6 @@
                                 <h2 class="titulo_producto">Medallones de Soja</h2>
                                 <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
                             </div>
-
-                            <div class="card_producto">
-                                <img src="img/medallones_soja.png" alt="" class="img-fluid">
-                                <h2 class="titulo_producto">Medallones de Soja</h2>
-                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
 
                             </div>
 
