Actualizacion de imagenes

--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
                 </div>
   
                 <div class="icon mx-1">
-                  <img src="img/ubicacion.png" alt="" class="iconos">
-                  <span class="descripcion_icon">Ubicación</span>
+                  <a href="https://goo.gl/maps/rnqFzuxWZmkFsfUx5">
+                    <img src="img/ubicacion.png" alt="" class="iconos">
+                    <span class="descripcion_icon">Ubicación</span>
+
+                  </a>
                 </div>
               </div>
             </div>
@@ -246,11 +249,11 @@
                       <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body interna_categoria row">
 
-                          <div class="card_producto">
+                          <!-- <div class="card_producto">
                                 <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
                                 <h2 class="titulo_producto">Medallones de Soja</h2>
                                 <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
-                            </div>
+                            </div> -->
 
                             </div>
 
