--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
               <img src="img/Logo_LaPaulina.jpg" alt="" class="logo">
   
               <div class="iconos_redes">
-                <div class="icon mx-1">
+                <!-- <div class="icon mx-1">
                   <img src="img/pedidosya.png" alt="" class="iconos">
                   <span class="descripcion_icon">PedidosYa</span>
-                </div>
+                </div> -->
   
                 <a href="https://wa.me/message/PUG7NC4GPIDFB1" target="_blank">
                   <div class="icon mx-1">
@@ -90,56 +90,68 @@
                             <div class="card_producto col col-6">
                                 <img src="img/Pollo.png" alt="" class="img-fluid img_producto">
                                 <h2 class="titulo_producto">Pollo</h2>
-                                <h3 class="precio_producto"><strong>$1300 x kg</strong></h3>
+                                <h3 class="precio_producto"><strong>$1000 x kg</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                                 <img src="img/Pechuga.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Pechuga</h2>
-                                <h3 class="precio_producto"><strong>$1300 x kg</strong></h3>
+                                <h3 class="precio_producto"><strong>$1800 x kg</strong></h3>
 
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Pata Muslo.jpg" alt="" class="img-fluid">
-                              <h2 class="titulo_producto">Pata Muslo</h2>
-                              <h3 class="precio_producto"><strong>$1300 x kg</strong></h3>
+                              <h2 class="titulo_producto">Pata Muslo x 1 kg</h2>
+                              <h3 class="precio_producto"><strong>$950</strong></h3>
+                            </div>
+
+                            <div class="card_producto col col-6">
+                              <img src="img/Pata Muslo.jpg" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Pata Muslo x 3 kg</h2>
+                              <h3 class="precio_producto"><strong>$2500</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Filet.jpg" alt="" class="img-fluid">
-                              <h2 class="titulo_producto">Filet</h2>
-                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                              <h2 class="titulo_producto">Filet de Pollo</h2>
+                              <h3 class="precio_producto"><strong>$2000 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/HamburguesaPollo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Hamburguesa de Pollo</h2>
-                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$3200 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Alitas.png" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Alitas</h2>
-                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$500 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/supremas.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Supremas</h2>
-                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$1800 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Trocitos.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Trocitos</h2>
-                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$700 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Menudos.jpg" alt="" class="img-fluid">
-                              <h2 class="titulo_producto">Menudos</h2>
-                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                              <h2 class="titulo_producto">Menudos x 1 kg</h2>
+                              <h3 class="precio_producto"><strong>$450 x kilo</strong></h3>
+                            </div>
+
+                            <div class="card_producto col col-6">
+                              <img src="img/Menudos.jpg" alt="" class="img-fluid">
+                              <h2 class="titulo_producto">Menudos x 3 gg</h2>
+                              <h3 class="precio_producto"><strong>$450 x kilo</strong></h3>
                             </div>
 
 
@@ -158,20 +170,27 @@
                           <div class="card_producto col col-6">
                             <img src="img/FiletMerluza.jpg" alt="" class="img-fluid img_producto">
                             <h2 class="titulo_producto">Filet de Merluza</h2>
-                            <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                            <h3 class="precio_producto"><strong>$2000 x kilo</strong></h3>
                         </div>
+                        
+                        <div class="card_producto col col-6">
+                          <img src="img/FiletMerluzaFinasHierbas.jpg" alt="" class="img-fluid img_producto">
+                          <h2 class="titulo_producto">Filet de Merluza a las Finas Hierbas</h2>
+                          <h3 class="precio_producto"><strong>$2200 x kg</strong></h3>
+                      </div>
 
                         <div class="card_producto col col-6">
                           <img src="img/MedallonMerluza.png" alt="" class="img-fluid img_producto">
                           <h2 class="titulo_producto">Medallón de Merluza</h2>
-                          <h3 class="precio_producto"><strong>$1300 x kg</strong></h3>
+                          <h3 class="precio_producto"><strong>$1500 x kg</strong></h3>
                       </div>
 
                       <div class="card_producto col col-6">
                         <img src="img/MerluzaEspinacaQueso.jpg" alt="" class="img-fluid img_producto">
                         <h2 class="titulo_producto">Medallón de Merluza, Espinaca y Queso</h2>
-                        <h3 class="precio_producto"><strong>$1300 x kg</strong></h3>
+                        <h3 class="precio_producto"><strong>$1650 x kg</strong></h3>
                     </div>
+
 
 
 
@@ -188,52 +207,58 @@
                         <div class="accordion-body interna_categoria row">
 
                           <div class="card_producto">
+                            <img src="img/MilanesasSoja.jpg" alt="" class="img-fluid img_producto">
+                            <h2 class="titulo_producto">Milanesas de Soja</h2>
+                            <h3 class="precio_producto"><strong>$1900 x kilo</strong></h3>
+                        </div>
+
+                          <div class="card_producto">
                                 <img src="img/PatitasPollo.jpg" alt="" class="img-fluid img_producto">
-                                <h2 class="titulo_producto">Patitas de Pollo</h2>
-                                <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                                <h2 class="titulo_producto">Patitas de Pollo clásicas</h2>
+                                <h3 class="precio_producto"><strong>$1900 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto">
                                 <img src="img/PatitasPolloJamonyQueso.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Patitas de Pollo c/ jamón y queso</h2>
-                                <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                                <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto">
                               <img src="img/Nugget.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Nuggets</h2>
-                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$2500 x kilo</strong></h3>
                           </div>
 
                           <div class="card_producto">
                             <img src="img/NuggetJamonyQueso.jpg" alt="" class="img-fluid">
                             <h2 class="titulo_producto">Nuggets Jamón y Queso</h2>
-                            <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                            <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
                         </div>
 
                         <div class="card_producto">
                           <img src="img/MedallonJamonQueso.jpg" alt="" class="img-fluid">
-                          <h2 class="titulo_producto">Medallón Jamón y Queso</h2>
-                          <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                          <h2 class="titulo_producto">Medallón Pollo, Jamón y Queso</h2>
+                          <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
                       </div>
 
                       
                       <div class="card_producto">
                         <img src="img/Ricosaurios.jpg" alt="" class="img-fluid">
                         <h2 class="titulo_producto">Ricosaurios</h2>
-                        <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                        <h3 class="precio_producto"><strong>$2300 x kilo</strong></h3>
                     </div>
 
                     <div class="card_producto">
                       <img src="img/pochoclos.jpg" alt="" class="img-fluid">
                       <h2 class="titulo_producto">Pochoclos de Pollo</h2>
-                      <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
+                      <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
                   </div>
 
                   <div class="card_producto">
                     <img src="img/pechuguitaCrispy.png" alt="" class="img-fluid">
                     <h2 class="titulo_producto">Pechuguita Crispy</h2>
-                    <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                    <h3 class="precio_producto"><strong>$2850 x kilo</strong>  </h3>
                 </div>
 
 
@@ -251,11 +276,11 @@
                       <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body interna_categoria row">
 
-                          <!-- <div class="card_producto">
-                                <img src="img/medallones_soja.png" alt="" class="img-fluid img_producto">
-                                <h2 class="titulo_producto">Medallones de Soja</h2>
-                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
-                            </div> -->
+                          <div class="card_producto">
+                            <img src="img/papas.png" alt="" class="img-fluid img_producto">
+                            <h2 class="titulo_producto">Papas bastón congeladas</h2>
+                            <h3 class="precio_producto"><strong>$1600 x kilo</strong></h3>
+                        </div>
 
                             </div>
 
