--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                             <div class="card_producto col col-6">
                                 <img src="img/Pollo.png" alt="" class="img-fluid img_producto">
-                                <h2 class="titulo_producto">Pollo</h2>
+                                <h2 class="titulo_producto">Pollo entero</h2>
                                 <h3 class="precio_producto"><strong>$1000 x kg</strong></h3>
                             </div>
 
@@ -227,13 +227,13 @@
                             <div class="card_producto">
                               <img src="img/Nugget.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Nuggets</h2>
-                              <h3 class="precio_producto"><strong>$2500 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
                           </div>
 
                           <div class="card_producto">
                             <img src="img/NuggetJamonyQueso.jpg" alt="" class="img-fluid">
                             <h2 class="titulo_producto">Nuggets Jamón y Queso</h2>
-                            <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
+                            <h3 class="precio_producto"><strong>$2500 x kilo</strong></h3>
                         </div>
 
                         <div class="card_producto">
