--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 
                             <div class="card_producto col col-6">
                               <img src="img/Menudos.jpg" alt="" class="img-fluid">
-                              <h2 class="titulo_producto">Menudos x 3 gg</h2>
-                              <h3 class="precio_producto"><strong>$450 x kilo</strong></h3>
+                              <h2 class="titulo_producto">Menudos x 3 kg</h2>
+                              <h3 class="precio_producto"><strong>$1000</strong></h3>
                             </div>
 
 
