--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <div class="card_producto col col-6">
                                 <img src="img/Pechuga.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Pechuga</h2>
-                                <h3 class="precio_producto"><strong>$2050 x kg</strong></h3>
+                                <h3 class="precio_producto"><strong>$1800 x kg</strong></h3>
 
                             </div>
 
@@ -138,8 +138,8 @@
 
                             <div class="card_producto col col-6">
                               <img src="img/Trocitos.jpg" alt="" class="img-fluid">
-                              <h2 class="titulo_producto">Trocitos</h2>
-                              <h3 class="precio_producto"><strong>$700 x kilo</strong></h3>
+                              <h2 class="titulo_producto">Trocitos (c/ pata muslo)</h2>
+                              <h3 class="precio_producto"><strong>$1000 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
@@ -182,13 +182,13 @@
                         <div class="card_producto col col-6">
                           <img src="img/MedallonMerluza.png" alt="" class="img-fluid img_producto">
                           <h2 class="titulo_producto">Medallón de Merluza</h2>
-                          <h3 class="precio_producto"><strong>$1500 x kg</strong></h3>
+                          <h3 class="precio_producto"><strong>$1550 x kg</strong></h3>
                       </div>
 
                       <div class="card_producto col col-6">
                         <img src="img/MerluzaEspinacaQueso.jpg" alt="" class="img-fluid img_producto">
                         <h2 class="titulo_producto">Medallón de Merluza, Espinaca y Queso</h2>
-                        <h3 class="precio_producto"><strong>$1650 x kg</strong></h3>
+                        <h3 class="precio_producto"><strong>$1700 x kg</strong></h3>
                     </div>
 
 
@@ -221,44 +221,44 @@
                             <div class="card_producto">
                                 <img src="img/PatitasPolloJamonyQueso.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Patitas de Pollo c/ jamón y queso</h2>
-                                <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
+                                <h3 class="precio_producto"><strong>$2400 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto">
                               <img src="img/Nugget.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Nuggets</h2>
-                              <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$2350 x kilo</strong></h3>
                           </div>
 
                           <div class="card_producto">
                             <img src="img/NuggetJamonyQueso.jpg" alt="" class="img-fluid">
                             <h2 class="titulo_producto">Nuggets Jamón y Queso</h2>
-                            <h3 class="precio_producto"><strong>$2500 x kilo</strong></h3>
+                            <h3 class="precio_producto"><strong>$2650 x kilo</strong></h3>
                         </div>
 
                         <div class="card_producto">
                           <img src="img/MedallonJamonQueso.jpg" alt="" class="img-fluid">
                           <h2 class="titulo_producto">Medallón Pollo, Jamón y Queso</h2>
-                          <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
+                          <h3 class="precio_producto"><strong>$2450 x kilo</strong></h3>
                       </div>
 
                       
                       <div class="card_producto">
                         <img src="img/Ricosaurios.jpg" alt="" class="img-fluid">
                         <h2 class="titulo_producto">Ricosaurios</h2>
-                        <h3 class="precio_producto"><strong>$2300 x kilo</strong></h3>
+                        <h3 class="precio_producto"><strong>$2600 x kilo</strong></h3>
                     </div>
 
                     <div class="card_producto">
                       <img src="img/pochoclos.jpg" alt="" class="img-fluid">
                       <h2 class="titulo_producto">Pochoclos de Pollo</h2>
-                      <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
+                      <h3 class="precio_producto"><strong>$2450 x kilo</strong></h3>
                   </div>
 
                   <div class="card_producto">
                     <img src="img/pechuguitaCrispy.png" alt="" class="img-fluid">
                     <h2 class="titulo_producto">Pechuguita Crispy</h2>
-                    <h3 class="precio_producto"><strong>$2850 x kilo</strong>  </h3>
+                    <h3 class="precio_producto"><strong>$3200 x kilo</strong>  </h3>
                 </div>
 
 
@@ -279,7 +279,7 @@
                           <div class="card_producto">
                             <img src="img/papas.png" alt="" class="img-fluid img_producto">
                             <h2 class="titulo_producto">Papas bastón congeladas</h2>
-                            <h3 class="precio_producto"><strong>$1600 x kilo</strong></h3>
+                            <h3 class="precio_producto"><strong>$2000 x kilo</strong></h3>
                         </div>
 
                             </div>
