Actualización de categoria

--- a/index.html
+++ b/index.html
@@ -277,6 +277,44 @@
                         </div>
                       </div>
                     </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                          Especialidades La Paulina
+                        </button>
+                      </h2>
+                      <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body interna_categoria row">
+
+                          <div class="card_producto">
+                            <img src="img/albondigas_pollo.jpg" alt="" class="img-fluid img_producto">
+                            <h2 class="titulo_producto">Albondigas Clásicas - Pollo</h2>
+                            <h3 class="precio_producto"><strong>$3800 x kilo</strong></h3>
+                        </div>
+
+                        <div class="card_producto">
+                          <img src="img/albondigas_pollo_jamonqueso.jpg" alt="" class="img-fluid img_producto">
+                          <h2 class="titulo_producto">Albondigas Pollo, Jamón y Queso</h2>
+                          <h3 class="precio_producto"><strong>$4000 x kilo</strong></h3>
+                      </div>
+
+                      <div class="card_producto">
+                        <img src="img/arrollado.jpg" alt="" class="img-fluid img_producto">
+                        <h2 class="titulo_producto">Arrollado de Pollo</h2>
+                        <h3 class="precio_producto"><strong>Consultar x kilo</strong></h3>
+                    </div>
+
+                    <div class="card_producto">
+                      <img src="img/Miga_Pollo.png" alt="" class="img-fluid img_producto">
+                      <h2 class="titulo_producto">Sandwich de Miga x Pedido</h2>
+                      <h3 class="precio_producto"><strong>Consultar x cantidad (Pollo, Ternera, Jamóny y Queso, y más variedad)</strong></h3>
+                  </div>
+
+
+                            </div>
+
+                        </div>
+                      </div>
 
                     <div class="accordion-item">
                       <h2 class="accordion-header">
@@ -297,6 +335,11 @@
 
                         </div>
                       </div>
+
+
+
+
+
                     </div>
                   </div>
             </div>
