Actualización de interfaz

--- a/index.html
+++ b/index.html
@@ -54,30 +54,30 @@
     <div class="container">
 
             <div class="redes mt-4">
-
               <img src="img/Logo_LaPaulina.jpg" alt="" class="logo">
-  
-              <div class="iconos_redes">
-                <a href="https://goo.gl/maps/rnqFzuxWZmkFsfUx5" target="_blank">
-                <div class="icon mx-1">
-                    <img src="img/ubicacion.png" alt="" class="iconos">
-                    <span class="descripcion_icon">Ubicación</span>
-                  </div>
-                </a>
-              </div>
             </div>
 
       </div>
+      
       <div class="container-fluid card_whatsapp">
         <a href="https://wa.me/message/PUG7NC4GPIDFB1" target="_blank"><div class="div_promo mt-4">
           <img src="img/whatsapp.png" alt="" height="60">
           <div>
-            Hacé tu pedido por whatsapp <br> ¡Presioná aquí!
+            Hacé tu pedido <br> y te lo enviamos <br> ¡Presioná aquí!
           </div>
        </div>
       </a>
       </div>
 
+      <div class="container-fluid card_whatsapp">
+        <a href="https://maps.app.goo.gl/2HUFRsEjPAeW8Qg77" target="_blank"><div class="div_ubicacion mt-4">
+          <img src="img/ubicacion.png" alt="" height="60">
+          <div>
+            Visitá nuestro local <br> ¡Presioná aquí!
+          </div>
+       </div>
+      </a>
+      </div>
         <div class="contenido my-4 container">
             <div class="medallones">
                 <div class="accordion" id="accordionExample">
