--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- <div class="container-fluid p-0">
         <img src="img/portada.png" alt="" class="portada img-fluid">
-    </div>  -->
+    </div>  
 
 
     <div class="promo_portada">
@@ -49,15 +49,20 @@
         </button>
       </div>
     </div>
-
+-->
 
     <div class="container">
 
             <div class="redes mt-4">
-              <img src="img/Logo_LaPaulina.jpg" alt="" class="logo">
+              <img src="img/Logo_LaPaulina.jpg" alt="" class="logo" class="">
             </div>
 
       </div>
+
+      <div class="container-fluid mt-4">
+        <a href="https://www.instagram.com/granja.lapaulina/" target="_blank"><img src="img/PostIG_1.png" alt="" class="img-fluid img_promo"></a>
+      </div>
+      
       
       <div class="container-fluid card_whatsapp">
         <a href="https://wa.me/message/PUG7NC4GPIDFB1" target="_blank"><div class="div_promo mt-4">
