--- a/index.html
+++ b/index.html
@@ -109,38 +109,38 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="card_producto col col-6">
                                 <img src="img/Pollo.png" alt="" class="img-fluid img_producto">
                                 <h2 class="titulo_producto">Pollo entero</h2>
-                                <h3 class="precio_producto"><strong>$2200 x kg</strong></h3>
+                                <h3 class="precio_producto"><strong>$2300 x kg</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                                 <img src="img/Pechuga.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Pechuga</h2>
-                                <h3 class="precio_producto"><strong>$3900 x kg</strong></h3>
+                                <h3 class="precio_producto"><strong>$5000 x kg</strong></h3>
 
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Pata Muslo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Pata Muslo x 1 kg</h2>
-                              <h3 class="precio_producto"><strong>$2100</strong></h3>
+                              <h3 class="precio_producto"><strong>$2300</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Pata Muslo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Pata Muslo x 3 kg</h2>
-                              <h3 class="precio_producto"><strong>$5900</strong></h3>
+                              <h3 class="precio_producto"><strong>$6000</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Filet.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Filet de Pollo</h2>
-                              <h3 class="precio_producto"><strong>$4100 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$5000 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/HamburguesaPollo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Hamburguesa de Pollo</h2>
-                              <h3 class="precio_producto"><strong>$3900 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$4900 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
@@ -152,7 +152,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="card_producto col col-6">
                               <img src="img/supremas.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Supremas</h2>
-                              <h3 class="precio_producto"><strong>$3900 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$4900 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
@@ -228,19 +228,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                           <div class="card_producto">
                                 <img src="img/PatitasPollo.jpg" alt="" class="img-fluid img_producto">
                                 <h2 class="titulo_producto">Patitas de Pollo clásicas</h2>
-                                <h3 class="precio_producto"><strong>$3900 x kilo</strong></h3>
+                                <h3 class="precio_producto"><strong>$4500 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto">
                                 <img src="img/PatitasPolloJamonyQueso.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Patitas de Pollo c/ jamón y queso</h2>
-                                <h3 class="precio_producto"><strong>$4400 x kilo</strong></h3>
+                                <h3 class="precio_producto"><strong>$4900 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto">
                               <img src="img/Nugget.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Nuggets</h2>
-                              <h3 class="precio_producto"><strong>$4800 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$4900 x kilo</strong></h3>
                           </div>
 
                           <!-- <div class="card_producto">
@@ -259,13 +259,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <div class="card_producto">
                         <img src="img/Ricosaurios.jpg" alt="" class="img-fluid">
                         <h2 class="titulo_producto">Ricosaurios</h2>
-                        <h3 class="precio_producto"><strong>$4800 x kilo</strong></h3>
+                        <h3 class="precio_producto"><strong>$4900 x kilo</strong></h3>
                     </div>
 
                     <div class="card_producto">
                       <img src="img/pochoclos.jpg" alt="" class="img-fluid">
                       <h2 class="titulo_producto">Pochoclos de Pollo</h2>
-                      <h3 class="precio_producto"><strong>$4400 x kilo</strong></h3>
+                      <h3 class="precio_producto"><strong>$4500 x kilo</strong></h3>
                   </div>
 
                   <div class="card_producto">
@@ -291,13 +291,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                           <div class="card_producto">
                             <img src="img/albondigas_pollo.jpg" alt="" class="img-fluid img_producto">
                             <h2 class="titulo_producto">Albondigas Clásicas - Pollo</h2>
-                            <h3 class="precio_producto"><strong>$3900 x kilo</strong></h3>
+                            <h3 class="precio_producto"><strong>$4900 x kilo</strong></h3>
                         </div>
 
                         <div class="card_producto">
                           <img src="img/albondigas_pollo_jamonqueso.jpg" alt="" class="img-fluid img_producto">
                           <h2 class="titulo_producto">Albondigas Pollo, Jamón y Queso</h2>
-                          <h3 class="precio_producto"><strong>$4100 x kilo</strong></h3>
+                          <h3 class="precio_producto"><strong>Consultar x kilo</strong></h3>
                       </div>
 
                       <div class="card_producto">
@@ -330,7 +330,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                           <div class="card_producto">
                             <img src="img/papas.png" alt="" class="img-fluid img_producto">
                             <h2 class="titulo_producto">Papas bastón congeladas</h2>
-                            <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
+                            <h3 class="precio_producto"><strong>$3400 x kilo</strong></h3>
                         </div>
 
                             </div>
