--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       </div>
 
+    <!-- End Google Tag Manager (noscript) 
       <div class="container-fluid mt-4">
         <a href="https://www.instagram.com/granja.lapaulina/" target="_blank" id="instagram"><img src="img/PostIG_1.png" alt="" class="img-fluid img_promo"></a>
       </div>
-      
+    -->
       
       <div class="container-fluid card_whatsapp">
         <a href="https://wa.me/message/PUG7NC4GPIDFB1" target="_blank"><div class="div_promo mt-4">
